--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <h2>Projects</h2>
 <hr />
 <h2>Practice Assignments</h2>
-<a href="Info2024/INFO2024/Practices/Practice1/HTMLPractice1">Practice 1</a>
-&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="INFO2024/Practices/Practice1/HTMLPractice1.html">Practice 1</a>
+
 <a href="/Fall2015/practice/ExpWeb1/circle.html">Practice 2</a>
 
 <hr />
