--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h2>Practice Assignments</h2>
 <a href="Practices/Practice1/HTMLPractice1.html">Practice 1</a>
 
-<a href="/Fall2015/practice/ExpWeb1/circle.html">Practice 2</a>
+<a href="/Practices/Practice1b/index.html">Practice 1b</a>
 
 <hr />
 <h2>Book Assignments</h2>
