--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <a href="Practices/Practice1/HTMLPractice1.html">Practice 1</a>
 
 <a href="Practices/Practice1b/index.html">Practice 1b</a>
+<a href="Practices/Practice2/FAQ.html">Practice 2</a>
 
 <hr />
 <h2>Book Assignments</h2>
