--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <h2>Practice Assignments</h2>
 <a href="Practices/Practice1/HTMLPractice1.html">Practice 1</a>
 
-<a href="Practices/Practice1b/index.html">Practice 1b</a>
-<a href="Practices/Practice2/faq.html">Practice 2</a>
+<a href="Practices/Practice1b/index.html">Practice 1a</a>
+<a href="Practices/Practice2/faq.html">Practice 1b</a>
+<a href="Practices/Practice2a/castus.html">Practice 2</a>
 
 <hr />
 <h2>Book Assignments</h2>
