--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <h1>Gaetan Ntambwe</h1>
 <hr />
 <h2>Projects</h2>
+<a href="Projects/Project1/Project1.html">Project 1</a>
 <hr />
 <h2>Practice Assignments</h2>
 <a href="Practices/Practice1/HTMLPractice1.html">Practice 1</a>
