--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<h1>Gaetan Ntambwe</h1>
+<h1>Home Page for Gaetan Ntambwe</h1>
 <hr />
 <h2>Projects</h2>
 <a href="Projects/Project1/Project1.html">Project 1</a>
