--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
 <a href="Practices/Practice2/cactus.html">Practice 2</a>
 
+<a href="Practices/Practice3/HTML3Files/index.html">Practice 3</a>
+
 <hr />
 <h2>Book Assignments</h2>
 
