--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
 <a href="Practices/Practice3/HTML3Files/index.html">Practice 3</a>
 
+<a href="Practices/Practice3b/Chap6/glossary.html">Practice 3b</a>
+
 <hr />
 <h2>Book Assignments</h2>
 
