--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <h2>Projects</h2>
 <a href="Projects/Project1/Project1.html">Project 1</a>
 <a href="Projects/Project2/AboutUs.html">Project 2</a>
+<a href="Projects/Project2/Tribute.html">Project 2 (Tribute)</a>
 <hr />
 <h2>Practice Assignments</h2>
 <a href="Practices/Practice1/HTMLPractice1.html">Practice 1</a>
