--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
 <a href="Practices/Practice3b/Chap6/glossary.html">Practice 3b</a>
 
+<a href="Practices/Practice4A/index.html">Practice 4A</a>
+
 <hr />
 <h2>Book Assignments</h2>
 
