adding ccs3 font

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
 <a href="Practices/Practice4A/index.html">Practice 4A</a>
 
+<a href="Practices/Practice4A/CSS3Fonts.html">Practice 4B</a>
+
 <hr />
 <h2>Book Assignments</h2>
 
