--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <a href="Practices/Practice4A/index.html">Practice 4A</a>
 
-<a href="Practices/CSS3Fonts.html">Practice 4B</a>
+<a href="Practices/CSS3Fonts/CSS3Fonts.html">Practice 4B</a>
 
 <hr />
 <h2>Book Assignments</h2>
