--- a/Practices/Practice5/HTML5/Chrysalis.html
+++ b/Practices/Practice5/HTML5/Chrysalis.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 
-<title>HTML Practice 5 - Fritillary</title>
+<title>HTML Practice 5 - Chrysalis</title>
 
 <style type="text/css">
 
@@ -25,13 +25,13 @@ h1{
 
 <body >
 
-<h1>Fritillary Butterfly Page</h1>
+<h1>Monarch Chrysalis Page</h1>
 
 <!-- Insert Fullsize Image here -->
-<p>         </p>
+<p> <img src="Images/Fullsize/ChrysalisLg.jpg" alt="Chrysalis Butterfly" width="350" height="250">        </p>
 
 
-<p>Fritillary Butterfly <br />
+<p>Monarch Chrysalis <br />
 <a href="index.html"> Return to Butterflies and Moths</a> </p>
 
 </body>
