--- a/Practices/Practice5/HTML5/Fritillary.html
+++ b/Practices/Practice5/HTML5/Fritillary.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 
-<title>HTML Practice 5 - Monarch</title>
+<title>HTML Practice 5 - Fritillary</title>
 
 <style type="text/css">
 
@@ -12,7 +12,6 @@ body{
 	font-family: Arial, Helvetica, sans-serif;
 	color: #005C5C;
 }
-
 
 
 h1{
@@ -26,15 +25,13 @@ h1{
 
 <body >
 
-<h1>Monarch Butterfly Page</h1>
+<h1>Fritillary Butterfly Page</h1>
 
 <!-- Insert Fullsize Image here -->
-<p>         
-
-</p>
+<p> <img src="Images/Fullsize/FritillaryLg.jpg" alt="Fritillary Butterfly" width="350" height="250">        </p>
 
 
-<p>Monarch Butterfly <br />
+<p>Fritillary Butterfly <br />
 <a href="index.html"> Return to Butterflies and Moths</a> </p>
 
 </body>
