--- a/Practices/Practice5/HTML5/Monarch.html
+++ b/Practices/Practice5/HTML5/Monarch.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 
-<title>HTML Practice 5 - Chrysalis</title>
+<title>HTML Practice 5 - Monarch</title>
 
 <style type="text/css">
 
@@ -12,6 +12,7 @@ body{
 	font-family: Arial, Helvetica, sans-serif;
 	color: #005C5C;
 }
+
 
 
 h1{
@@ -25,13 +26,15 @@ h1{
 
 <body >
 
-<h1>Monarch Chrysalis Page</h1>
+<h1>Monarch Butterfly Page</h1>
 
 <!-- Insert Fullsize Image here -->
-<p>         </p>
+<p> <img src="Images/Fullsize/MonarchLg.jpg" alt="Monarch Butterfly" width="350" height="250">         
+
+</p>
 
 
-<p>Monarch Chrysalis <br />
+<p>Monarch Butterfly <br />
 <a href="index.html"> Return to Butterflies and Moths</a> </p>
 
 </body>
