--- a/Practices/Practice5/HTML5/index.html
+++ b/Practices/Practice5/HTML5/index.html
@@ -1,11 +1,39 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 
 <title>HTML Practice 5 - Using Images and Color</title>
 
-<style type="text/css">
+<style>
+body{
+	font-family: Arial,Helvetica, sans-serif;
+	background-color:#F4FAFF;
+	Color:#51000B;
+}
+
+.thumbnailleft{
+	float:left;
+	padding-right: 10px;
+}
+
+.thumbnailright{
+	float: right;
+	padding-left: 10px;
+}
+
+a:link{
+	Color:#246D5E;
+}
+
+a:visited{
+	color:#F3A2AD;
+}
+a:hover{
+	color:#D4946A;
+}
+
+
 
 
 </style>
@@ -16,7 +44,7 @@
 
 <h1 id="Top">Butterflies and Moths</h1>
 
-
+<a href="Fritillary.html"><img src="Images/Thumbnails/FritillarySm.jpg" alt="Fritillary butterfly" class="thumbnailleft" width= "100" height= "71"></a>
 <h2>Fun Butterfly and Moth Facts</h2>
 
 <p>	Here are some interesting and strange butterfly facts. 
@@ -39,13 +67,13 @@
 <p><a href="http://www.thebutterflysite.com/facts.shtml" target="_blank">
 	The ButterflySite.com</a></p>
 
-<hr />
+<hr>
 
 <h2>Some Butterfly Favorites</h2>
 
 <h3>Monarchs</h3>
 
-<p>
+<p><a href="Monarch.html"><img src="Images/Thumbnails/MonarchSm.jpg" alt="Monarch Butterfly" class="thumbnailleft" width= "100" height= "71"></a>
 	The Monarch butterfly, also known as the milkweed butterfly, 
 	is not able to survive cold winters of North America. 
 	Eastern Monarchs will migrate to Mexico and those in the 
@@ -55,7 +83,7 @@
 	of about 2,000 miles, and return to the north again in the spring. 
 </p>
 
-<p>
+<p><a href="Chrysalis.html"><img src="Images/Thumbnails/ChrysalisSm.jpg" alt="chrysalis butterfly"  width= "100" height= "71" class="thumbnailright"></a>
 	The Monarch cocoon is called a chrysalis.  As the butterfly 
 	begins to metamorphose, the chrysalis begins to darken and 
 	will turn transparent just before the butterfly emerges.  
@@ -72,8 +100,8 @@
 
 <h3>Swallowtails</h3>
 
-<p>
-	Swallowtail butterflies, being large, colorful, and attractive, 
+<a href="TigerSwallowtail.html"><img src="Images/Thumbnails/TigerSm.jpg" alt="Tiger butterfly" class="thumbnailleft" width= "100" height= "71"></a>
+<p>	Swallowtail butterflies, being large, colorful, and attractive, 
 	have been the target of butterfly collectors in earlier times. 
 	The adults are often tailed like the forked tail of some swallows, 
 	giving the insect its name.  There are at least 550 species, 
@@ -81,7 +109,7 @@
 	are found on all continents except Antarctica.  
 </p>
 
-<p>
+<p><a href="ZebraSwallowtail.html"><img src="Images/Thumbnails/ZebraSm.jpg" alt="Zebra Butterfly" class= "thumbnailright"  width= "100" height="71"></a>
 	The Zebra Swallowtail has triangular wings with long tails. 
 	It has some distinctive black and white markings on its wings 
 	and some small red and blue markings on both bottom corners 
@@ -96,7 +124,7 @@
 
 <h3>Blue Morpho</h3>
 
-<p>
+<p><a href="BlueMorpho.html"><img src="Images/Thumbnails/MorphoSm.jpg" alt="Morpho Butterfly" class="thumbnailleft" width="100" height="71"></a>
 	Many Morpho butterflies are colored in metallic, shimmering 
 	shades of blue and green. These colors are not a result of 
 	pigmentation but are an example of iridescence, the sun 
