--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 
 <a href="Practices/CSS3Fonts/CSS3Fonts.html">Practice 4B</a>
 
+<a href="Practices/HTML5/index.html">Practice 5</a>
+
+
 <hr />
 <h2>Book Assignments</h2>
 
