--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <a href="Practices/CSS3Fonts/CSS3Fonts.html">Practice 4B</a>
 
-<a href="Practices/Practice5/HTML5/index.html">Practice 5</a>
+<a href="Practices/HTML5/index.html">Practice 5</a>
 
 
 <hr />
