--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
 <a href="Practices/HTML5/index.html">Practice 5</a>
 
+<a href="Practices/Practice5/bistro.html">Practice 5b</a>
+
 
 <hr />
 <h2>Book Assignments</h2>
