--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
 <a href="Practices/Practice5b/bistro.html">Practice 5b</a>
 
+<a href="Practices/Practice6A/Practice6A.html">Practice 6A</a>
+
 
 <hr />
 <h2>Book Assignments</h2>
