--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <a href="Practices/Practice5b/bistro.html">Practice 5b</a>
 
 <a href="Practices/Practice6A/Practice6A.html">Practice 6A</a>
+<a href="Practices/HTML6/table.html">Practice 6B</a>
 
 
 <hr />
